Project

General

Profile

Actions

Bug #58678

closed

cephfs_mirror: local and remote dir root modes are not same

Added by Milind Changire about 1 year ago. Updated 5 months ago.

Status:
Resolved
Priority:
Normal
Category:
Correctness/Safety
Target version:
% Done:

100%

Source:
Tags:
backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
cephfs-mirror
Labels (FS):
task(medium)
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The top level dir modes of local snap dir root and remote snap dir root don't match


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #59000: quincy: cephfs_mirror: local and remote dir root modes are not sameResolvedMilind ChangireActions
Copied to CephFS - Backport #59001: pacific: cephfs_mirror: local and remote dir root modes are not sameResolvedMilind ChangireActions
Copied to CephFS - Backport #59408: reef: cephfs_mirror: local and remote dir root modes are not sameResolvedMilind ChangireActions
Actions #1

Updated by Milind Changire about 1 year ago

  • Assignee set to Milind Changire
Actions #2

Updated by Venky Shankar about 1 year ago

  • Status changed from New to Pending Backport
  • Pull request ID set to 50049
Actions #3

Updated by Venky Shankar about 1 year ago

  • Target version set to v18.0.0
Actions #4

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59000: quincy: cephfs_mirror: local and remote dir root modes are not same added
Actions #5

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59001: pacific: cephfs_mirror: local and remote dir root modes are not same added
Actions #6

Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed
Actions #7

Updated by Venky Shankar about 1 year ago

  • Tags deleted (backport_processed)
  • Backport changed from pacific,quincy to reef,quincy,pacific
Actions #8

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59408: reef: cephfs_mirror: local and remote dir root modes are not same added
Actions #9

Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed
Actions #10

Updated by Konstantin Shalygin 5 months ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF