cephfs_mirror: sync snap dir root mode with remote dir

Fixes: https://tracker.ceph.com/issues/58678
Signed-off-by: Milind Changire <mchangir@redhat.com>